--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "face-swap-batch-v2",
-  "version": "2.0.0",
-  "description": "Minimalist batch face-swap web app with row-based processing",
+  "name": "only-ascending",
+  "version": "1.0.0",
+  "description": "Premium face-swap batch tool - ONLY ASCENDING edition",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "axios": "^1.6.0",
     "multer": "^1.4.5-lts.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@supabase/supabase-js": "^2.39.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
